--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "antd": "^4.5.1",
     "axios": "^0.19.2",
     "lodash": "^4.17.19",
-    "mathjax-react": "^1.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-mathjax-preview": "^2.1.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
